--- a/css/header.css
+++ b/css/header.css
@@ -108,7 +108,49 @@
     right: 16px;
     color: white;
 }
+.div_phone_ad {
+    display: none;
+}
 /* _____________________________________________Adaptive_________________________________________ */
+@media screen and (max-width: 1200px) {
+    .div_phone_ad {
+        display: flex;
+    }
+    .header_wrap {
+        padding: 52px 12px 26px 12px;
+        justify-content: center;
+    }
+    .header_left img {
+        margin-right: 16px;
+    }
+    .search_inp {
+        width: 197px;
+        padding-left: 60px;
+        margin-right: 16px;
+        background-size: 12%;
+    }
+    .p-adress {
+        margin-right: 0px;
+    }
+    .div_phone, .p-adress {
+        display: none;
+    }
+    .div_phone_ad {
+        flex-direction: column;
+        /* margin-right: 130px; */
+    }
+    .div_telephone {
+        display: flex;
+        margin-bottom: 9px;
+    }
+    .header_right {
+        width: 500px;
+        justify-content: space-between;
+    }
+    .img_phone_ad {
+        margin-right: 13px;
+    }
+}
 @media screen and (max-width: 768px) {
     .header_left, .header_right {
         display: none;
@@ -116,7 +158,7 @@
     .header_mobile {
         display: flex;
         align-items: center;
-        width: 360px;
+        width: 1360px;
         justify-content: space-between;
         padding: 0px 20px;
     }
