--- a/css/style-dostavka.css
+++ b/css/style-dostavka.css
@@ -60,3 +60,47 @@
     line-height: 165%;
     margin-bottom: 40px;
 }
+.intro_nav_mob, .intro_img_mob {
+    display: none;
+}
+/* _____________________________________adaptive_________________________________________________ */
+@media screen and (max-width: 768px) {
+    .main {
+        margin-left: 0px;
+    }
+    .intro_nav_mob, .intro_img_mob {
+        display: block;
+    }
+    .intro_nav, .intro_img, .intro_h2 {
+        display: none;
+    }
+    .intro_desc {
+        padding: 0px 16px 0px 16px;
+        width: auto;
+    }
+    .intro-links-cards {
+        width: auto;
+    }
+    .intro_nav_mob {
+        margin-bottom: 32px;
+    }
+    .intro_nav_mob a {
+        font-weight: 300;
+        font-size: 24px;
+        line-height: 165%;
+        padding-right: 16px;
+        padding-left: 10px;
+    }
+    .intro_img_mob {
+        margin-bottom: 32px;
+    }
+    .desc_p {
+        margin-bottom: 32px;
+    }
+    .intro-links {
+        justify-content: center;
+    }
+    .intro_img_mob {
+        align-self: center;
+    }
+}
