--- a/css/footer.css
+++ b/css/footer.css
@@ -165,16 +165,66 @@
     display: none;
 }
 /* _____________________________________________Adaptive_________________________________________ */
+@media screen and (max-width: 1400px) {
+    .footer {
+        margin-left: 0px;
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
+    }
+    .footer_wrap {
+        flex-direction: column;
+        padding: 100px 0px 0px 0px;
+        gap: 64px;
+        margin-bottom: 100px;
+        width: 800px;
+    }
+    .contact_us_mob {
+        width: 673px;
+        height: 388px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 36px 36px 24px 36px;
+        box-shadow: 0px 0px 4px rgba(75, 75, 75, 0.25);
+        border-radius: 24px;
+        margin-bottom: 64px;
+    }
+    .contact_us {
+        display: none;
+    }
+    .contact_us_mob h4 {
+        font-weight: 300;
+        font-size: 36px;
+        line-height: 165%;
+        margin-bottom: 23px;
+    }
+    .contact_us_mob p {
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 165%;
+        margin-bottom: 24px;
+        width: 600px;
+    }
+    .footer_right_cont {
+        align-items: start;
+    }
+    .footer_right_p {
+        text-align: left;
+    }
+}
 @media screen and (max-width: 768px) {
     .footer {
         margin-left: 0px;
         overflow: hidden;
+        display: block;
     }
     .footer_wrap {
         flex-direction: column;
         padding: 64px 16px 0px 16px;
         gap: 64px;
         margin-bottom: 128px;
+        width: auto;
     }
     .footer_left {
         width: auto;
@@ -211,6 +261,7 @@
     }
     .contact_us_mob p {
         margin-bottom: 24px;
+        width: auto;
     }
     .foot_inp {
         width: 260px;
