--- a/css/footer.css
+++ b/css/footer.css
@@ -18,6 +18,7 @@
     padding-top: 90px;
     gap: 77px;
     margin-bottom: 110px;
+    flex-wrap: wrap;
 }
 .footer_left {
     width: 600px;
@@ -178,6 +179,7 @@
         gap: 64px;
         margin-bottom: 100px;
         width: 800px;
+        margin-left: 0px;
     }
     .contact_us_mob {
         width: 673px;
