--- a/css/style-products-detail.css
+++ b/css/style-products-detail.css
@@ -286,35 +286,19 @@
 .pag_right {
     margin-left: 20px;
 }
+.perk_detail_descript_mob, .perk_detail_atr_mob, .perk_detail_pos_mob {
+    display: none;
+}
    /* _____________________________________________Adaptive_________________________________________ */
-@media screen and (max-width: 1620px) {
-    .card_wrap {
-        justify-content: center;
+@media screen and (max-width: 1700px) {
+    .cards_wrap {
+        max-width: 1360px;
     }
-    .ul_main {
-        width: 300px;
-    }
-    .menu_wrap {
+    .main {
         padding-left: 16px;
     }
-    .div_phone {
-        width: 200px;
-        margin-right: 0px;
-    }
-    .p-adress {
-        width: 170px;
-        margin-right: 0px;
-    }
-    .header_right {
-        width: 800px;
-        justify-content: space-between;
-    }
-    .header_wrap {
-        padding-left: 16px;
-        padding-right: 16px;
-    }
-    .intro_nav {
-        padding-left: 16px;
+    .swiper_my {
+        margin-left: 60px;
     }
     .footer_wrap {
         flex-direction: column;
@@ -325,37 +309,9 @@
         margin-left: 200px;
     }
 }
-@media screen and (max-width: 1400px) {
+@media screen and (max-width: 1460px) {
     .header_right {
         width: 500px;
-    }
-    .cards_nav_top {
-        flex-direction: column;
-    }
-    .cards_nav_left {
-        margin-bottom: 20px;
-        display: flex;
-        flex-wrap: wrap;
-    }
-    .cards_nav_right {
-        margin-left: 5px;
-    }
-    .contact_us_mob {
-        width: auto;
-        height: auto;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        padding: 36px 36px 24px 36px;
-        box-shadow: 0px 0px 4px rgba(75, 75, 75, 0.25);
-        border-radius: 24px;
-        margin-bottom: 64px;
-    }
-    .contact_us_mob p {
-        width: auto;
-    }
-    .cards_nav_left a {
-        margin-bottom: 16px;
     }
     .footer_wrap {
         margin-left: 0px;
@@ -363,226 +319,90 @@
     .footer {
         justify-content: end;
     }
+    .cards_wrap {
+        max-width: 1010px;
+    }
+    .swiper_my {
+        margin-left: auto;
+        align-self: center;
+    }
+    .card_img img {
+        width: 1000px;
+        max-width: 100%;
+        object-fit: contain;
+    }
+    .card_desc_top {
+        margin-bottom: 24px;
+    }
+}
+@media screen and (max-width: 1050px) {
+    .cards_wrap {
+        max-width: 670px;
+    }
 }
 @media screen and (max-width: 768px) {
-    .prod_nav_hide {
-        display: flex;
-        position: fixed;
-        width: 100%;
-        height: 100%;
-        background-color: white;
+    .card_img img {
+        width: 400px;
+        height: 265px;
+        max-width: 100%;
+        object-fit: contain;
+    }
+    .main {
+        padding-left: 0px;
+    }
+    .cards_wrap {
+        max-width: 331px;
+    }
+    .intro_wrap {
         flex-direction: column;
-        transform: translateX(170%);
+        padding-left: 16px;
     }
-    .prod_nav_hide_active {
-        transform: translateX(0%);
-    }
-    .prod_nav_hide_wrap {
-        flex-direction: column;
-        display: flex;
-        align-items: center;
-    }
-    .prod_nav_hide_wrap a {
-        border: 2px solid rgba(75, 75, 75, 0.25); 
-        border-radius: 12px;
-        width: 328px;
-        height: 38px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 16px;
-    }
-    .prod_nav_hide_wrap a:hover {
-        box-shadow: 0px 0px 4px #BEBEBE;
-        font-weight: 600;
-    }
-    .menu_adaptive, .intro_nav, .intro {
+    .menu_adaptive {
         display: none;
     }
-    .intro_mobile {
+    .perk_nav {
+        display: flex;
+        flex-direction: column;
+        padding-left: 16px;
+    }
+    .perk_descript, .perk_atr, .perk_pos {
+        width: fit-content;
+    } 
+    .perk_detail_descript, .perk_detail_atr, .perk_detail_pos {
+        display: none;
+    }
+    .perk_detail_descript_mob, .perk_detail_atr_mob, .perk_detail_pos_mob {
+        margin: 32px 0px;
+        padding-right: 16px;
+    }
+    .perk_wrap {
+        padding: 32px 0px;
+        border-top: 1px solid;
+        border-bottom: 1px solid;
+    }
+    .act {
         display: block;
     }
-    .footer_wrap {
-        flex-direction: column;
-        padding: 64px 16px 0px 16px;
-        gap: 64px;
-        margin-bottom: 128px;
-        width: auto;
+    .disact {
+        display: none;
     }
-    .prod_nav {
-        background-image: url('../img/products/prod-nav.svg');
-        background-repeat: no-repeat;
-        height: 38px;
-        width: 40px;
-        display: flex;
-        margin-right: 16px;
+    .perk_detail_pos_mob img {
+        max-width: 100%;
+        display: block;
+        object-fit: cover;
     }
-    .prod_nav:hover, .prod_nav_active {
-        background-image: url('../img/products/prod-nav-active.svg');
-    }
-    .prod_list {
-        background-image: url('../img/products/prod-list.svg');
-        background-repeat: no-repeat;
-        height: 38px;
-        width: 40px;
-        display: flex;
-    }
-    .prod_list:hover, .prod_list_active {
-        background-image: url('../img/products/prod-list-active.svg');
-    }
-    .nav_wrap {
-        display: flex;
-        max-width: 760px;
-        justify-content: center;
-        align-items: center;
-        margin-top: 12px;
-        margin-bottom: 55px;
-    }
-    .info_nav {
-        margin: 0px 55px;
-    }
-    .info_nav h1 {
-        font-weight: 300;
-        font-size: 24px;
-        line-height: 165%;
-    }
-    .info_nav p {
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 165%;
-        color: #888888;
-    }
-    .products_wrap {
-        display: flex;
-        flex-direction: column;
-        padding: 0px 12px;
-        gap: 20px;
-        align-items: center;
-    }
-    .prod_card {
-        display: flex;
-        flex-direction: column;
-        border-radius: 24px;
-        max-width: 310px;
-        padding: 4px 8px;
-        border: 2px solid #DCDCDC;
-    }
-    .prod_card:hover {
-        box-shadow: 0px 0px 4px rgba(75, 75, 75, 0.25);
-    }
-    .desc_card {
-        display: flex;
-        justify-content: space-between;
-    }
-    .desc_card_img {
-        height: 160px;
-    }
-    .desc_card_price {
-        display: flex;
-        flex-direction: column;
-    }
-    .price_old {
-        align-self: flex-end;
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 165%;
-        text-decoration-line: line-through;
-        margin-bottom: 5px;
-    }
-    .price_new {
-        align-self: flex-end;
-        font-weight: 300;
-        font-size: 20px;
-        line-height: 165%;
-        margin-bottom: 20px;
-    }
-    .p_big {
-        font-weight: 700;
-        font-size: 16px;
-        line-height: 135%;
+    .perk_nav a {
         margin-bottom: 10px;
-        padding-right: 10px;
     }
-    .p_light {
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 165%;
-        padding-right: 10px;
-        margin-bottom: 35px;
-    }
-    .but_card {
-        align-self: end;
-    }
-    .buy_btn {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 240px;
-        height: 50px;
-        border: 1px solid #171717;
-        border-radius: 45px;
-    }
-    .buy_btn:hover img {
+    .nav_mob_none {
         display: none;
     }
-    .buy_btn:hover {
-        justify-content: center;
-        color: white;
-        background: #171717;
-        transition: 1s;
+    .spec_offers {
+        padding-left: 16px;
     }
-    .buy_btn img {
-        padding-left: 30px;
-    }
-    .pagination_wrap {
+    .footer {
         display: flex;
-        justify-content: end;
-        margin-bottom: 70px;
-        margin-top: 48px;
-    }
-    .pagination_wrap a {
-       display: flex;
-       font-weight: 300;
-       font-size: 20px;
-       line-height: 100%;
-       margin-right: 21px;
-       padding-bottom: 3px;
-       border-bottom: 1px solid white;
-    }
-     .pagination_wrap a img {
-       padding-left: 9px;
-    }
-     .pagination_wrap a:hover {
-        border-bottom: 1px solid black;
-    }
-    .prod_list_hide {
-        display: flex;
-        position: fixed;
-        width: 100%;
-        height: 100%;
-        background-color: white;
-        flex-direction: column;
-        transform: translateX(170%);
-        margin-top: -20px;
-    }
-    .prod_list_hide_active {
-        transform: translateX(0%);
-        position: absolute;
-    }
-    .prod_list_hide_wrap {
-        flex-direction: column;
-        display: flex;
-        align-items: center;
-    }
-    .products_wrap_active,
-    .pagination_wrap_active,
-    .footer_active {
-        display: none;
-    }
-    .li_main_list {
-        display: block;
-    }
-    .li_main_list_close {
-        display: none;
+        padding-left: 16px;
+        padding-right: 16px;
     }
 }
